--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <div class="single-feature foo" data-sr='enter'>
                             <div class="feature-icon"><i class="fa fa-file-code-o"></i></div>
                             <div class="feature-content">
-                                <h4 class="feature-title">拥有成章学习组的帮助</h4>
+                                <h4 class="feature-title">拥有学生的帮助</h4>
                                 <p>学习上遇到的困难提出来，学霸为你解答，群友互帮互助，让你的学习变得更加简单！</p>
                             </div>
                         </div>
