--- a/index.html
+++ b/index.html
@@ -563,12 +563,12 @@
                                 <img src="img/client-1.png" alt="responsive img">
                             </div>
                             <div class="client-details">
-                                <h5 class="client-name">肖桂华 <span class="text-thin">416班</span></h5>
-                                <p>作者：416班  廖可心：
+                                <h5 class="client-name">欧阳静<span class="text-thin">441/440班</span></h5>
+                                <p>作者：441班  学生：
 
  
 
-善仰望星空，有方向有目标；智者，当脚踏实地，为实现理想而努力奋斗。成章实验中学有这样一位老师，仰望时有野心，敢想敢做；实干时有恒心，敢打敢拼；一言一行，总是充满魅力，催人奋进。他就是人称“183”的男神——肖桂华老师。我们416班的熊孩子们，喜欢亲切地称呼他“老肖”。                                     </p>
+                                    欧阳静老师在教学中注重培养学生的语文素养和综合能力。她通过丰富多样的教学资源和活动，帮助学生提高阅读理解能力、写作表达能力和口头表达能力。她鼓励学生积极参与课堂讨论和互动，在轻松愉快的氛围中学习和交流。她还注重培养学生的批判性思维和信息素养，教导我们如何培养独立思考的能力。                               </p>
                             </div>
                         </div>
                         <div class="item">
@@ -576,12 +576,12 @@
                                 <img src="img/client-2.png" alt="responsive img">
                             </div>
                             <div class="client-details">
-                                <h5 class="client-name">谢伟华<span class="text-thin">406班</span></h5>
-                                <p>作者：406班  王玥淇：
+                                <h5 class="client-name">甘晓伊<span class="text-thin">492班</span></h5>
+                                <p>作者：492班  学生：
 
  
 
-                                   勤于教研，精于教学，慧于育人，以爱动人。谢伟华让学生感受到数学的无穷趣味，让学生看到了一个老师认真负责的最美姿态。他的关怀，他的温暖，感动着身边的每一个学生，让我们一起看看学生眼中的谢伟华老师。</p>
+                                    甘晓伊老师上课风趣幽默，他像一位知心的朋友一样，了解学生的日常，跟学生做朋友，上课更让学生懂得理解，趣味的理解，甘晓伊老师曾连续两年荣获学校青年教师教学比武一等奖。2022年，甘晓伊还荣获衡阳市信息技术2.0融合展示比赛一等奖及地理优秀教学案例展示活动一等奖。</p>
                             </div>
                         </div>
                         <div class="item">
@@ -589,12 +589,12 @@
                                 <img src="img/client-3.png" alt="responsive img">
                             </div>
                             <div class="client-details">
-                                <h5 class="client-name">刘红燕 <span class="text-thin">398班 </span></h5>
-                                <p>作者：398班  张思逸家长：
+                                <h5 class="client-name">看这里，哇！竟然空了一个！<span class="text-thin"> </span></h5>
+                                <p>火热招老师中，期待你的到来！
 
  
 
-                                    刘红燕，现任成章实验中学398班班主任，2006年参加工作以来，多次荣获“十佳班主任”“优秀班主任”“先进教师”等荣誉称号，曾获得衡阳市教学比武赛课一等奖。她是一位慈爱的母亲，更是一位用爱温暖学生的老师，家长眼中的她恪尽职守，令人心生敬意。 </p>
+                                    </p>
                             </div>
                         
                             </div>
